[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddos_prediction_mitigation_orchestrator"
version = "0.1.0"
description = "Forecast and mitigate volumetric and application-layer DDoS events."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
